--- a/style.css
+++ b/style.css
@@ -5,6 +5,14 @@ body {
   line-height: normal;
   margin: 0;
 }
+
+.headerText {
+  font-family: East Sea Dokdo;
+  font-size: 50px;
+  margin: 0px;
+  padding: 0px;
+}
+
 #main-header {
   background-color: #fc7200;
   color: #fff;
@@ -25,6 +33,8 @@ body {
   text-decoration: none;
   font-size: 18px;
   padding-right: 16px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 .active {
   background-color: #fc7200;
@@ -37,11 +47,27 @@ a {
 a:hover {
   color: #fc7200;
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  border-radius: 30px;
+}
+
 .container {
   width: 80%;
   margin: auto;
   overflow: hidden;
 }
+
+.container2 {
+  margin: auto;
+  overflow: hidden;
+  padding-left: 20px;
+}
+
 .button {
   background-color: #333;
   color: #fc7200;
@@ -103,22 +129,16 @@ a:hover {
   background-color: #333;
   color: #fff;
   text-align: center;
-  padding: 20px;
-  margin-top: 40px;
+  padding: 5px;
+  margin-top: 384px;
 }
-#contact-main-footer {
+
+#main-footer2 {
   background-color: #333;
   color: #fff;
   text-align: center;
-  padding: 20px;
-  margin-top: 336px;
-}
-#about-main-footer {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  padding: 20px;
-  margin-top: 351px;
+  padding: 5px;
+  margin-top: 250px;
 }
 .Notice {
   color: #fc7200;
