--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+* {
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
+
 body {
   background-color: rgb(255, 255, 255);
   color: #000;
@@ -36,6 +45,7 @@ body {
   margin-left: 10px;
   margin-right: 10px;
 }
+
 .active {
   background-color: #fc7200;
   padding: 16px;
@@ -68,16 +78,6 @@ a:hover {
   padding-left: 20px;
 }
 
-.button {
-  background-color: #333;
-  color: #fc7200;
-  padding: 10px 15px;
-  border: none;
-}
-.button:hover {
-  background-color: #fc7200;
-  color: #333;
-}
 .my-form {
   padding: 20px;
 }
@@ -92,6 +92,7 @@ a:hover {
   padding: 8px;
   width: 100%;
 }
+
 .block {
   float: left;
   width: 33.3%;
@@ -119,7 +120,14 @@ a:hover {
   margin-right: auto;
   width: 80%;
   height: auto;
+  border: 1px #ccc solid;
+  border-radius: 15px;
 }
+
+.img-border {
+  border-radius: 15px;
+}
+
 .contents {
   border: 1px #ccc solid;
   padding: 10px;
@@ -130,7 +138,7 @@ a:hover {
   color: #fff;
   text-align: center;
   padding: 5px;
-  margin-top: 384px;
+  margin-top: 208px;
 }
 
 #main-footer2 {
@@ -142,4 +150,87 @@ a:hover {
 }
 .Notice {
   color: #fc7200;
+}
+input[type="text"] {
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+textarea {
+  width: 47.5%;
+  padding: 50px 20px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  display: inline-block;
+  box-sizing: border-box;
+}
+
+input[type="button"] {
+  width: 20%;
+  background-color: #333;
+  color: #fc7200;
+  padding: 14px 20px;
+  margin-left: 340px;
+  margin-top: 30px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type="button"]:hover {
+  background-color: #fc7200;
+  color: #333;
+}
+
+.show-modal {
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 17px;
+}
+
+.close-modal {
+  position: absolute;
+  top: 1.2rem;
+  right: 2rem;
+  font-size: 5rem;
+  color: #333;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.hidden {
+  display: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+
+  background-color: white;
+  padding: 6rem;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+  z-index: 10;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 5;
 }
